# secure-ai-studio

./: .env.example  .gitignore  BRANCH_COMPARISON.md  COMPLETION_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.dashboard  Dockerfile.monitoring  FINAL_PROJECT_SUMMARY.md  FINAL_PROJECT_UPDATE.md  FINAL_SKILL_MATRIX.md  FIVE_PILLARS_IMPLEMENTATION.md  IMPLEMENTATIO-CONTEXT.md  Makefile  PHASE_3_READINESS_TRACKER.md  PROFESSIONAL_POLISHING_REPORT.md  PROJECT_EVALUATION.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_UPDATE.md  README.md  STARTUP_GUIDE.md  TECHNICAL_ROADMAP_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  check_phase3_readiness.bat  check_phase3_status.py  docker-compose.full.yml  docker-compose.yml  pytest.ini  requirements-test.txt  requirements.dashboard.txt  requirements.monitoring.txt  requirements.txt  run_all_tests.py  setup.cfg  start_app.py  test_report.json  test_results_summary.txt  verify_functionality.py  verify_output_log.txt
ai/: ai_testing_tools.py
app/: main.py  routes.py
certification/: ctal_tae_preparation.py
config/: system.conf
data/: budget_state.json
docs/: DEPLOYMENT_CHECKLIST.md  clean_code_migration_guide.md  screenplay_migration_guide.md  sdet_practical_application.md  sdet_study_plan.md
leadership/: technical_leadership_framework.py
metrics/: performance_benchmark_20260128_120335.csv  performance_benchmark_20260128_120335.json  resilience_test_20260128_120940.csv  resilience_test_20260128_120940.json  sprint2_performance_report_20260128_120335.md  sprint3_resilience_report_20260128_120940.md
(+91 files in other folders)
