[metadata]
name = secure-ai-studio
version = 1.0.0

[options]
packages = find:
install_requires =
    flask
    python-dotenv
    requests
    flask-limiter
    boto3

[tool:pytest]
testpaths = tests/unit tests/integration
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --ignore=tests/offline_image_test.py
    --ignore=tests/simple_offline_test.py
    --ignore=tests/sprint1_comprehensive_validator.py
    --ignore=tests/sprint2_performance_generator.py
    --ignore=tests/sprint3_resilience_tester.py
    --ignore=tests/load_testing_framework.py
    --ignore=tests/chaos_engineering_simulator.py
    --ignore=tests/ai_driven_testing.py
    --ignore=tests/visual_regression_tests.py
markers =
    unit: Unit tests
    integration: Integration tests
    security: Security tests
    api: API tests